force-app/main/default/objects/Demo_Setup__c/Demo_Setup__c.object-meta.xml
<CustomObject>
    <label>Demo Setup</label>
    <nameField>
        <label>Demo Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>