force-app/main/default/objects/Demo_Setup__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>REQUIRED!!! This links the demo setup record to an applicant, which is heavily leveraged for many of the demo scenarios (Recruiting, Hiring, Suitability, and Onboarding).</description>
    <inlineHelpText>REQUIRED!!! This links the demo setup record to an applicant, which is heavily leveraged for many of the demo scenarios (Recruiting, Hiring, Suitability, and Onboarding).</inlineHelpText>
    <label>Applicant</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Demo Setup</relationshipLabel>
    <relationshipName>Demo_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>