force-app/main/default/objects/Demo_Setup__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Required for Recruiting and Hiring Demo Scenarios. Links the Recruit (Lead) and Applicant (Opportunity) to a Campaign to track how we interacted with the recruit.</description>
    <inlineHelpText>Required for Recruiting and Hiring Demo Scenarios. Links the Recruit (Lead) and Applicant (Opportunity) to a Campaign to track how we interacted with the recruit.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Demo Setup</relationshipLabel>
    <relationshipName>Demo_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>