force-app/main/default/objects/Demo_Setup__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <defaultValue>&quot;[no company provided]&quot;</defaultValue>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>