force-app/main/default/objects/Demo_Setup__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>REQUIRED!!! This links the demo setup record to an Employee (Contact), which is heavily leveraged for every demo scenario.</description>
    <inlineHelpText>REQUIRED!!! This links the demo setup record to an Employee (Contact), which is heavily leveraged for every demo scenario.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Demo Setup (Contact)</relationshipLabel>
    <relationshipName>Demo_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>