force-app/main/default/objects/Demo_Setup__c/fields/Current_Demo_Config__c.field-meta.xml
<CustomField>
    <fullName>Current_Demo_Config__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Select this box to configure the Org for this Demo Setup.  Only ONE may be selected at a time.</inlineHelpText>
    <label>Current Demo Config</label>
    <type>Checkbox</type>
</CustomField>