force-app/main/default/objects/Demo_Setup__c/fields/Disability__c.field-meta.xml
<CustomField>
    <fullName>Disability__c</fullName>
    <label>Disability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Disability</valueSetName>
    </valueSet>
</CustomField>