force-app/main/default/objects/Demo_Setup__c/fields/Duty_Location__c.field-meta.xml
<CustomField>
    <fullName>Duty_Location__c</fullName>
    <label>Duty Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Duty_Location</valueSetName>
    </valueSet>
</CustomField>