force-app/main/default/objects/Demo_Setup__c/fields/Duty_Station__c.field-meta.xml
<CustomField>
    <fullName>Duty_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duty Station</label>
    <referenceTo>Duty_Station__c</referenceTo>
    <relationshipLabel>Demo Setup</relationshipLabel>
    <relationshipName>Demo_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>