force-app/main/default/objects/Demo_Setup__c/fields/Employee_Photo_Asset_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Photo_Asset_File_Name__c</fullName>
    <defaultValue>&apos;Generic Contact Profile Image&apos;</defaultValue>
    <description>&quot;Title&quot; Of the Asset File to be used at the Employee Photo.</description>
    <inlineHelpText>&quot;Title&quot; Of the Asset File to be used at the Employee Photo.</inlineHelpText>
    <label>Employee Photo Asset Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>