force-app/main/default/objects/Demo_Setup__c/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ethnicity</valueSetName>
    </valueSet>
</CustomField>