force-app/main/default/objects/Demo_Setup__c/fields/Job_Opening__c.field-meta.xml
<CustomField>
    <fullName>Job_Opening__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Required for Recruiting, Hiring, Suitability, and Onboarding Demo Scenarios. Used to copy over position, grade, and other data to the Recruit, Applicant, and Contact records.</description>
    <inlineHelpText>Required for Recruiting, Hiring, Suitability, and Onboarding Demo Scenarios. Used to copy over position, grade, and other data to the Recruit, Applicant, and Contact records.</inlineHelpText>
    <label>Job Opening</label>
    <referenceTo>Job_Opening__c</referenceTo>
    <relationshipLabel>Demo Setup</relationshipLabel>
    <relationshipName>Demo_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>