force-app/main/default/objects/Demo_Setup__c/fields/Law_Enforcement_Experience__c.field-meta.xml
<CustomField>
    <fullName>Law_Enforcement_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Law Enforcement Experience</label>
    <type>Checkbox</type>
</CustomField>