force-app/main/default/objects/Demo_Setup__c/fields/Mobile_Telephone_Provider__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Telephone_Provider__c</fullName>
    <label>Mobile Telephone Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mobile_Telephone_Provider</valueSetName>
    </valueSet>
</CustomField>