force-app/main/default/objects/Demo_Setup__c/fields/Racial_Category__c.field-meta.xml
<CustomField>
    <fullName>Racial_Category__c</fullName>
    <label>Racial Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Racial_Category</valueSetName>
    </valueSet>
</CustomField>