force-app/main/default/objects/Demo_Setup__c/fields/Recruit__c.field-meta.xml
<CustomField>
    <fullName>Recruit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Recruit (Lead) record attached to this demo setup record. This is empty when the demo is reset to the Recruiting Scenario.</description>
    <inlineHelpText>Recruit (Lead) record attached to this demo setup record. This is empty when the demo is reset to the Recruiting Scenario.</inlineHelpText>
    <label>Recruit</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Demo Setup</relationshipLabel>
    <relationshipName>Demo_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>