force-app/main/default/objects/Demo_Setup__c/fields/Recruit_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Date_of_Birth__c</fullName>
    <label>Recruit Date of Birth</label>
    <type>Date</type>
</CustomField>