force-app/main/default/objects/Demo_Setup__c/fields/Recruit_Email__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Email__c</fullName>
    <label>Recruit Email</label>
    <type>Email</type>
</CustomField>