force-app/main/default/objects/Demo_Setup__c/fields/Recruit_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Recruit_First_Name__c</fullName>
    <defaultValue>&quot;Alice&quot;</defaultValue>
    <label>Recruit First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>