force-app/main/default/objects/Demo_Setup__c/fields/Recruit_Form_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Form_Background_Color__c</fullName>
    <label>Recruit Form Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>