force-app/main/default/objects/Demo_Setup__c/fields/Recruit_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Last_Name__c</fullName>
    <defaultValue>&quot;Brown&quot;</defaultValue>
    <label>Recruit Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>