force-app/main/default/objects/Demo_Setup__c/fields/Recruit_Lead_Form_Logo__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Lead_Form_Logo__c</fullName>
    <label>Recruit Lead Form Logo</label>
    <length>90</length>
    <type>Text</type>
</CustomField>