force-app/main/default/objects/Demo_Setup__c/fields/Recruit_Lead_Heading_1__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Lead_Heading_1__c</fullName>
    <label>Recruit Lead Heading 1</label>
    <length>90</length>
    <type>Text</type>
</CustomField>