force-app/main/default/objects/Demo_Setup__c/fields/Recruit_Lead_Heading_1_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Lead_Heading_1_Line_2__c</fullName>
    <label>Recruit Lead Heading 1 Line 2</label>
    <length>90</length>
    <type>Text</type>
</CustomField>