force-app/main/default/objects/Demo_Setup__c/fields/Recruit_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>Recruit_MobilePhone__c</fullName>
    <label>Recruit Mobile</label>
    <type>Phone</type>
</CustomField>