force-app/main/default/objects/Demo_Setup__c/fields/Recruit_Phone__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Phone__c</fullName>
    <label>Recruit Phone</label>
    <type>Phone</type>
</CustomField>