force-app/main/default/objects/Demo_Setup__c/fields/Recruit_Place_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Place_of_Birth__c</fullName>
    <label>Recruit Place of Birth</label>
    <length>155</length>
    <type>Text</type>
</CustomField>