force-app/main/default/objects/Demo_Setup__c/fields/Recruit_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Salutation__c</fullName>
    <description>Values must still be managed to match the values on the Salutation standard field on the Contact object</description>
    <label>Recruit Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Prof.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>