force-app/main/default/objects/Demo_Setup__c/fields/Recruit_Source__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Source__c</fullName>
    <description>This uses a global value set, but you will still need to make sure these values match the Recruit/Lead object&apos;s LeadSource standard field&apos;s values (which cannot be managed in a value set).</description>
    <label>Recruit Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Recruit_Source</valueSetName>
    </valueSet>
</CustomField>