force-app/main/default/objects/Demo_Setup__c/fields/Recruiter_Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Owner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which user should be assigned as the owner of the recruit/lead record when it is created? This is typically the recruiter/HR specialist.</description>
    <inlineHelpText>Which user should be assigned as the owner of the recruit/lead record when it is created? This is typically the recruiter/HR specialist.</inlineHelpText>
    <label>Recruiter/Owner (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Demo_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>