force-app/main/default/objects/Demo_Setup__c/fields/Starting_Phase__c.field-meta.xml
<CustomField>
    <fullName>Starting_Phase__c</fullName>
    <description>This field controls what scenario (Hiring, Onboarding, etc..) this demo setup can reset too. It is designed to be a governor to prevent you from rewinding a demo so far back that you have to run through the whole demo to get it back to where you want it. If you need to go farther back, just use one of the other pre-configured demo setups.</description>
    <inlineHelpText>This field controls what scenario (Hiring, Onboarding, etc..) this demo setup can reset too. It is designed to be a governor to prevent you from rewinding a demo so far back that you have to run through the whole demo to get it back to where you want it. If you need to go farther back, just use one of the other pre-configured demo setups.</inlineHelpText>
    <label>Starting Phase</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recruiting</fullName>
                <default>true</default>
                <label>Recruiting</label>
            </value>
            <value>
                <fullName>Hiring</fullName>
            </value>
            <value>
                <fullName>Suitability</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Employee Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>