force-app/main/default/objects/Demo_Setup__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>REQUIRED!!! Ensures that the Recruit (Lead), Applicant (Opportunity), and Employee (Contact), have a supervisor which is leveraged for many of the scenarios, especially Employee Services.</description>
    <inlineHelpText>REQUIRED!!! Ensures that the Recruit (Lead), Applicant (Opportunity), and Employee (Contact), have a supervisor which is leveraged for many of the scenarios, especially Employee Services.</inlineHelpText>
    <label>Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Demo Setup (Supervisor)</relationshipLabel>
    <relationshipName>Demo_Setup_Supervisor</relationshipName>
    <type>Lookup</type>
</CustomField>