force-app/main/default/objects/Demo_Setup__c/fields/Workforce_Manager__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Predominantly leveraged for the Employee Services and Labor Relations Scenarios. Ensures that the Employee (Contact) is assigned to the correct Workforce Liaison.</description>
    <inlineHelpText>Predominantly leveraged for the Employee Services and Labor Relations Scenarios. Ensures that the Employee (Contact) is assigned to the correct Workforce Liaison.</inlineHelpText>
    <label>Workforce Liaison</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Demo Setup</relationshipLabel>
    <relationshipName>Demo_Setup_WFM</relationshipName>
    <type>Lookup</type>
</CustomField>