force-app/main/default/objects/Demo_Setup__c/listViews/Demo_Setup_by_Phase.listView-meta.xml
<ListView>
    <fullName>Demo_Setup_by_Phase</fullName>
    <columns>Starting_Phase__c</columns>
    <columns>NAME</columns>
    <columns>Recruit__c</columns>
    <columns>Applicant__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>Demo Setup by Phase</label>
</ListView>